--- a/templates/home.html
+++ b/templates/home.html
@@ -89,7 +89,10 @@
         ">
         <div class="hero-text" style="color: white; vertical-align: top;">
             <h1 style="font-size: 2.61vw;"> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
-            <p>In the loving memory of Professor Asoke Nath Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p>
+            
+            <p>In the loving memory of and as a tribute to the life and work of Prof. Asoke Nath Mitra, we are organizing this meeting and the second memorial lecture. Prof. Mitra's contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and  have inspired many generations of physicists. The <a href="https://www.youtube.com/watch?v=4kn6BwdyA14">inaugural memorial lecture</a> was given by Prof. N. Panchapakesan on Apr 17, 2023, and was organized by the department of Physics, University of Delhi.</p>
+
+            <!-- <p>In the loving memory of Professor Asoke Nath Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p> -->
 
             <div class="buttons">
                 <a href="/lecture" style="margin-top: 3vw;" class="type2">Learn More</a>
