--- a/static/css/about.css
+++ b/static/css/about.css
@@ -55,6 +55,40 @@ body {
 /*    filter: blur(5px);*/
 }
 
+q,
+blockquote {
+  quotes: "“" "”" "‘" "’";
+/*  font-style: italic;*/
+}
+
+.french {
+  quotes: "«" "»" "‹" "›";
+}
+
+q:before,
+blockquote:before {
+  content: open-quote;
+}
+
+q:after,
+blockquote:after {
+  content: close-quote;
+}
+
+q:before,
+q:after,
+blockquote:before,
+blockquote:after {
+  color: purple;
+  font-size: 3em;
+}
+
+blockquote {
+  margin-left: 0;
+  padding-left: 1em;
+  border-left: 5px solid purple;
+}
+
 /* header */
     header {
         background: #333;
@@ -99,6 +133,7 @@ body {
 }
 .content h2 {
     font-family: "Lora";
+    text-decoration: underline;
     font-size: 3em;
     color: #333;
 /*    text-align: center;*/
