--- a/templates/about.html
+++ b/templates/about.html
@@ -65,7 +65,7 @@
             <!-- <h2>Prof. A. N. Mitra Memorial Lecture</h2>
             <p>We are honored to organize a memorial lecture on the birth anniversary of Prof. A. N. Mitra, a distinguished physicist known for his significant contributions to the field of theoretical physics.</p> -->
             <h2>Professor Asoke Nath Mitra</h2>
-            <div style="font-size: 1rem; font-family: monospace;">(15 April 1929 - 26 November 2022)</div>
+            <div id="birth-death-dates">(15 April 1929 - 26 November 2022)</div>
 
             <blockquote>
                 <p>Professor Asoke Nath Mitra was a renowned physicist whose work has left a lasting impact on the scientific community. His research in theoretical physics has paved the way for many advancements in the field.</p>
@@ -75,7 +75,7 @@
                 <p>After his Ph.D., Mitra went to Cornell University, where he completed a second Ph.D., working with Freeman Dyson and Hans Bethe. Mitra returned to India in 1955, and was appointed Reader at Aligarh Muslim University. He moved to Delhi University as professor in 1963, where he remained until his superannuation in 1994. Mitra was head of the Department of Physics and Astrophysics during 1973–75, but stepped down without completing his three-year term. He held visiting appointments at Indiana University (1962–63) and at the University of Illinois at Chicago (1986–87). He held the prestigious chair of INSA: INSA-Albert Einstein Research Professor during 1989–94 at the University of Delhi. He was a life-time emeritus professor of the university of Delhi at its department of physics and astrophysics. He has produced many PhD's who now occupy leading academic positions.</p>
             </blockquote>
 
-            <div style="font-family: Krub; font-weight: bold; text-align: left; width: 100%;"> (Taken from <a href="https://en.wikipedia.org/wiki/Asoke_Nath_Mitra" class="ref-link">https://en.wikipedia.org/wiki/Asoke_Nath_Mitra)</a> </div>
+            <div id="source-citation"> (Taken from <a href="https://en.wikipedia.org/wiki/Asoke_Nath_Mitra" class="ref-link">https://en.wikipedia.org/wiki/Asoke_Nath_Mitra)</a> </div>
 
             <h3 style="font-family: Lora; font-size: 24px; text-decoration: underline;">References</h3>
             <p>You may read more through following links.</p>
