--- a/templates/home.html
+++ b/templates/home.html
@@ -38,9 +38,9 @@
         </div>
     </nav>
 
-    <div style="padding-top: 3.14vw;"></div>
+    <div style="padding-top: 60px;"></div>
 
-    <div class="hero">
+    <div class="hero anmitra">
         <!-- <div class="hero-image"> -->
             <!-- <img src="{% static 'images/anmitra2.png' %}" alt="Prof. A. N. Mitra"> -->
             <!-- <img src="/anmitra.png"  -->
@@ -62,16 +62,17 @@
                 <h1>A. N. Mitra Memorial Meeting and Lecture</h1>
                 <div style="height: 1.5vw;"></div>
 
-                <p id="about-anmseries">In the loving memory of and as a tribute to the life and work of Prof. Asoke Nath Mitra, we are organizing this meeting and the second memorial lecture. Prof. Mitra's contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and  have inspired many generations of physicists. The <a href="https://www.youtube.com/watch?v=4kn6BwdyA14">inaugural memorial lecture</a> was given by Prof. N. Panchapakesan on Apr 17, 2023, and was organized by the department of Physics, University of Delhi.</p>
+                <p id="about-anmseries">In the loving memory of and as a tribute to the life and work of Prof. Asoke Nath Mitra, we are organizing this meeting and the second memorial lecture. Prof. Mitra's contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and have inspired many generations of physicists.</p>
 
-                <!-- <p style="font-size: 1vw;">In the loving memory of Prof. A. N. Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p> -->
                 <div style="height: 3.5vw;"></div>
-                <p id="date-event">April 14-15, 2025</p>
+                <!-- <p id="date-event">April 14-15, 2025</p> -->
+                <p id="date-event">April 14<sup>th</sup>-15<sup>th</sup>, 2025</p>
                 <div style="width: 10vw;; display: inline-flex;"></div>
                 <div class="buttons" style="display: inline-flex; justify-content: space-between; align-content: right;">
-                    <a href="/register" class="type1">Meeting</a>
-                    <a href="/lecture" class="type1">Lecture</a>
+                    <a href="./schedule.html" class="type2">Meeting</a>
+                    <a href="./WittenLecture.html" class="type2">Lecture</a>
                 </div>
+                <div style="height: 2vw;"></div>
             </div>
         </div>
 
@@ -86,27 +87,20 @@
         <div class="hero-text" style="color: white; vertical-align: top;">
             <h1> 2<sup>nd</sup> A. N. Mitra Memorial Lecture</h1>
 
-            <p id="about-lecture">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-            <!-- <p>In the loving memory of Professor Asoke Nath Mitra, we are holding this memorial meeting and lecture. This online lecture is a tribute to the life and work of late professor A. N. Mitra. His contributions to the field of High Energy and Nuclear Physics are recognised widely around the world and he has inspired many to do the same!</p> -->
+            <p id="about-lecture">This memorial lecture will be delivered by Professor Edward Witten on the topic "A Background - Independent Algebra For Gravity". This is the second A. N. Mitra memorial lecture. The <a href="https://www.youtube.com/watch?v=4kn6BwdyA14">inaugural memorial lecture</a> was given by Prof. N. Panchapakesan on Apr 17, 2023, and was organized by the department of Physics, University of Delhi.</p>
 
             <div class="buttons" id="learn-more-lec-button">
                 <a href="./lecture" style="margin-top: 3vw;" class="type2">Learn More</a>
                 <!-- <a href="/lecture" class="type1">Lecture</a> -->
             </div>
 
-            <div class="circleWitten">
-                <a href="/lecture"><img src="../static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
+            <div class="circleWitten" id="inside">
+                <a href="./WittenLecture.html" title="Designed by Gayatri Misra"><img src="../static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
             </div>
         </div>
-        <!-- <div class="circleWitten">
-            <a href="/lecture"><img src="../static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
-        </div> -->
+        <div class="circleWitten" id="outside">
+            <a href="./WittenLecture.html" title="Designed by Gayatri Misra"><img src="../static/images/lecturePoster.jpeg" alt="Professor Edward Witten"></a>
+        </div>
     </div>
 
 
@@ -115,7 +109,7 @@
         <!-- Footer -->
         <footer>
             <div class="footer-bottom">
-                <p>In the loving memory of Professor Asoke Nath Mitra.</p>
+                <p title="Designed by Ayush Ashray, Rajnish and Shivam">In the loving memory of Professor Asoke Nath Mitra.</p>
                 <!-- email llink -->
 
                 <p>For queries, contact &nbsp;<a href="mailto:aalok.misra@ph.iitr.ac.in" style="color: cyan;"> aalok.misra@ph.iitr.ac.in</a>.</p>
