--- a/static/css/index.css
+++ b/static/css/index.css
@@ -344,7 +344,11 @@ body {
             font-family: Krub;
         }
 
-        body {
+        /*body {
+            margin-top: 30px;
+        }*/
+
+        .anmitra {
             margin-top: 30px;
         }
 
@@ -396,6 +400,7 @@ body {
 
         #date-event {
             width: 100%;
+            color: black;
         }
 
         .hero-text {
